infrastructure/istio/lefranc-0/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pauwels-labs
  namespace: istio-ingress
spec:
  selector:
    app: istio-gateway
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "network.pauwelslabs.com"
    - "github-webhook.cd.pauwelslabs.com"
    - "secrets.pauwelslabs.com"
    - "identity.pauwelslabs.com"
    - "echo.pauwelslabs.com"
    - "auth.pauwelslabs.com"
    - "dashboards.pauwelslabs.com"
    - "alerts.pauwelslabs.com"
    - "metrics.pauwelslabs.com"
    - "webhook.ci.pauwelslabs.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-kiali
      protocol: HTTPS
    hosts:
    - "kiali/network.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-network-pauwels-labs
  - port:
      number: 443
      name: https-github-webhook
      protocol: HTTPS
    hosts:
    - "flux-system/github-webhook.cd.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-github-webhook-cd-pauwels-labs
  - port:
      number: 443
      name: https-secrets
      protocol: HTTPS
    hosts:
    - "vault/secrets.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-secrets-pauwels-labs
  - port:
      number: 443
      name: https-identity
      protocol: HTTPS
    hosts:
    - "keycloak/identity.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-identity-pauwels-labs
  - port:
      number: 443
      name: https-echo
      protocol: HTTPS
    hosts:
    - "oauth2-proxy/echo.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-echo-pauwels-labs
  - port:
      number: 443
      name: https-auth
      protocol: HTTPS
    hosts:
    - "oauth2-proxy/auth.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-auth-pauwels-labs
  - port:
      number: 443
      name: https-dashboards
      protocol: HTTPS
    hosts:
    - "monitoring/dashboards.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-dashboards-pauwels-labs
  - port:
      number: 443
      name: https-alerts
      protocol: HTTPS
    hosts:
    - "monitoring/alerts.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-alerts-pauwels-labs
  - port:
      number: 443
      name: https-metrics
      protocol: HTTPS
    hosts:
    - "monitoring/metrics.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-metrics-pauwels-labs
  - port:
      number: 443
      name: https-webhook-ci
      protocol: HTTPS
    hosts:
    - "tekton-pipelines/webhook.ci.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-webhook-ci-pauwels-labs
