infrastructure/istio/lefranc-0/patch-gateway-pauwelslabs-com.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pauwelslabs-com
  namespace: "${infranamespaceprefix}istio-ingress"
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "network.pauwelslabs.com"
    - "github-webhook.cd.${environment}.pauwelslabs.com"
    - "cd.${environment}.pauwelslabs.com"
    - "ci.pauwelslabs.com"
    - "secrets.pauwelslabs.com"
    - "identity.pauwelslabs.com"
    - "echo.pauwelslabs.com"
    - "auth.pauwelslabs.com"
    - "dashboards.pauwelslabs.com"
    - "alertmanager.pauwelslabs.com"
    - "alerts.pauwelslabs.com"
    - "webhook.ci.pauwelslabs.com"
    - "telemetry.pauwelslabs.com"
    - "logs.pauwelslabs.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-kiali
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}kiali/network.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-network-pauwels-labs
  - port:
      number: 443
      name: https-github-webhook-cd-${environment}
      protocol: HTTPS
    hosts:
    - "flux-system/github-webhook.cd.${environment}.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-github-webhook-cd-${environment}-pauwels-labs
  - port:
      number: 443
      name: https-cd-${environment}
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}weaveworks-gitops/cd.${environment}.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-cd-${environment}-pauwels-labs
  - port:
      number: 443
      name: https-ci
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}tekton-pipelines/ci.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-ci-pauwels-labs
  - port:
      number: 443
      name: https-secrets
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}vault/secrets.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-secrets-pauwels-labs
  - port:
      number: 443
      name: https-identity
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}keycloak/identity.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-identity-pauwels-labs
  - port:
      number: 443
      name: https-echo
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}grafana-mimir/echo.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-echo-pauwels-labs
  - port:
      number: 443
      name: https-auth
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}oauth2-proxy/auth.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-auth-pauwels-labs
  - port:
      number: 443
      name: https-dashboards
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}grafana/dashboards.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-dashboards-pauwels-labs
  - port:
      number: 443
      name: https-alertmanager
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}grafana-mimir/alertmanager.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-alertmanager-pauwels-labs
  - port:
      number: 443
      name: https-alerts
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}monitoring/alerts.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-alerts-pauwels-labs
  - port:
      number: 443
      name: https-webhook-ci
      protocol: HTTPS
    hosts:
    - "webhook.ci.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-webhook-ci-pauwels-labs
  - port:
      number: 443
      name: https-telemetry
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}grafana-mimir/telemetry.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-telemetry-pauwels-labs
  - port:
      number: 443
      name: https-logs
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}grafana-loki/logs.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-logs-pauwels-labs
