infrastructure/istio/lefranc-0/patch-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pauwels-labs
  namespace: "${infranamespaceprefix}istio-ingress"
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "network.pauwelslabs.com"
    - "github-webhook.cd.${environment}.pauwelslabs.com"
    - "secrets.pauwelslabs.com"
    - "identity.pauwelslabs.com"
    - "echo.pauwelslabs.com"
    - "auth.pauwelslabs.com"
    - "dashboards.pauwelslabs.com"
    - "alerts.pauwelslabs.com"
    - "metrics.pauwelslabs.com"
    - "webhook.ci.pauwelslabs.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-kiali
      protocol: HTTPS
    hosts:
    - "kiali/network.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-network-pauwels-labs
  - port:
      number: 443
      name: https-github-webhook-cd-${environment}
      protocol: HTTPS
    hosts:
    - "flux-system/github-webhook.cd.${environment}.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-github-webhook-cd-${environment}-pauwels-labs
  - port:
      number: 443
      name: https-secrets
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}vault/secrets.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-secrets-pauwels-labs
  - port:
      number: 443
      name: https-identity
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}keycloak/identity.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-identity-pauwels-labs
  - port:
      number: 443
      name: https-echo
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}keycloak/echo.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-echo-pauwels-labs
  - port:
      number: 443
      name: https-auth
      protocol: HTTPS
    hosts:
    - "${infranamespaceprefix}oauth2-proxy/auth.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-auth-pauwels-labs
  - port:
      number: 443
      name: https-dashboards
      protocol: HTTPS
    hosts:
    - "monitoring/dashboards.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-dashboards-pauwels-labs
  - port:
      number: 443
      name: https-alerts
      protocol: HTTPS
    hosts:
    - "monitoring/alerts.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-alerts-pauwels-labs
  - port:
      number: 443
      name: https-metrics
      protocol: HTTPS
    hosts:
    - "monitoring/metrics.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-metrics-pauwels-labs
  - port:
      number: 443
      name: https-webhook-ci
      protocol: HTTPS
    hosts:
    - "webhook.ci.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-webhook-ci-pauwels-labs
